fixes for conflated records display
- smaller icon
- hide redondant sameAsXyz properties
- show icon on each data taken from another resource

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -234,16 +234,16 @@ a.login { text-decoration:underline; cursor:pointer; }
 .resource .data a:hover { border-bottom:1px solid rgba(229, 74, 53,1); }
 
 .urilink { position:relative; }
-.urilink.sameAs { padding-left:0px; }
-.urilink.sameAs::before 
-{ content:''; position:relative;display:inline-block;width:20px;height:20px; background-color:white;  vertical-align: -5px;padding-right:5px; 
-   background-position:right 5px center;background-size:contain;background-repeat:no-repeat;
+h4:not(.sameAs) .urilink.sameAs, h4.sameAs { padding-left:0px; }
+h4:not(.sameAs) .urilink.sameAs::before, h4.sameAs::before
+{ content:''; position:relative;display:inline-block;width:13px;height:13px; background-color:white;  vertical-align: -4px;padding-right:8px; padding-bottom:2px;
+   background-position:right 5px top;background-size:13px auto;background-repeat:no-repeat;
 }
-.urilink.dila::before { background-image:url("/DILA-favicon.ico"); }
-.urilink.wd::before { background-image:url("/WD.svg"); }
-.urilink.ola::before { background-image:url("/OL.png"); }
-.urilink.viaf::before { background-image:url("/VIAF.png"); }
-.urilink.mbbt::before { background-image:url("/MB-icon.jpg"); }
+.sameAs.dila::before { background-image:url("/DILA-favicon.ico"); }
+.sameAs.wd::before { background-image:url("/WD.svg"); }
+.sameAs.ola::before { background-image:url("/OL.png"); }
+.sameAs.viaf::before { background-image:url("/VIAF.png"); }
+.sameAs.mbbt::before { background-image:url("/MB-icon.jpg"); }
 
 .resource button svg:hover { color:rgba(0,0,0,0.65); }
 
