--- a/src/components/App.css
+++ b/src/components/App.css
@@ -239,10 +239,12 @@ a.login { text-decoration:underline; cursor:pointer; }
 { content:''; position:relative;display:inline-block;width:13px;height:13px; background-color:white;  vertical-align: -4px;padding-right:8px; padding-bottom:2px;
    background-position:right 5px top;background-size:13px auto;background-repeat:no-repeat;
 }
-.sameAs.bdr::before { background-image:url("/logo.svg"); background-size:17px auto;}
+.sameAs.bdr::before { background-image:url("/logo.svg"); background-size:17px auto; }
+.sameAs.bnf::before { background-image:url("/BNF.svg"); background-size:19px auto;background-position:top 3px left;}
 .sameAs.dila::before { background-image:url("/DILA-favicon.ico"); }
-.sameAs.EAP::before { background-image:url("/BL.gif"); background-size:auto 13px; background-position:left 5px top; }
+.sameAs.eap::before { background-image:url("/BL.gif"); background-size:auto 13px; background-position:left 5px top; }
 .sameAs.gretil::before { background-image:url("/GRETIL.png"); background-size:auto 13px; }
+.sameAs.ia::before { background-image:url("/IA.png"); background-size:auto 13px;background-position:top 0px left 3px;}
 .sameAs.mbbt::before { background-image:url("/MB-icon.jpg"); }
 .sameAs.ola::before { background-image:url("/OL.png"); }
 .sameAs.viaf::before { background-image:url("/VIAF.png"); }
