--- a/src/components/App.css
+++ b/src/components/App.css
@@ -296,6 +296,7 @@ h3 + .propCollapseHeader,
 h3 + .sub 
 { margin-top:2px; }
 
+.resource .data > div .sub > h4.multiple,
 /*.resource .data > div > h4,*/ /* « object type: manuscript » */
 .resource .data > div > h4.multiple,
 /*.resource .data > div > .sub > h4:not(.first),*/ /*  eg « title: biblio title: » */
@@ -303,6 +304,7 @@ h3 + .sub
 /* :not(:nth-child(2):last-child), */
 .propCollapse > div > div > h4,
 .propCollapseHeader > h4 { width:100%; padding-left:20px; }
+.resource .data > div .sub > h4.multiple::after,
 .resource .data > div > h4::after,
 .resource .data > div > .sub > h4:not(.first)::after,
 .propCollapse > div > div > h4::after,
