--- a/src/components/App.css
+++ b/src/components/App.css
@@ -496,6 +496,8 @@ div.match span.highlight { border:1px solid rgba(229, 74, 53,1); padding:0px 4px
 div.match div.multi > span:not(:last-child)::after { content:", "; }
 /* div.match span.highlight { background-color: rgba(229, 74, 53,1.0); color:white ; padding:0px 2px ;}  */
 
+.urilink .highlight { color:rgba(179, 14, 0,1); } 
+
 #UView { width:800px;height:480px;border:none; overflow:visible; }
 
 #fond:not(.hidden) { position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.5); left:0;top:0;z-index:150; }
