--- a/src/components/App.css
+++ b/src/components/App.css
@@ -56,19 +56,19 @@ a.result button { text-transform:none; padding-bottom:0;}
 
 .result-box { display:flex; }
 
-.source { /*position:absolute;*/ top:0; margin-top:9px; margin-left:0px; display:inline-block; flex-shrink:0;}
+.source { /*position:absolute;*/ top:0; margin-top:8px; margin-left:0px; display:inline-block; flex-shrink:0;}
 
 .sameAsLogo,
-.source a img { height:32px; margin:0 5px; padding-top:2px; display:inline-block;}
+.source a img { height:18px; margin:0 5px; padding-top:2px; display:inline-block;}
 /* .source a:last-child img { height:35px; vertical-align:top;  } */
 
-.sameAsLogo { color:black; font-weight:bold; background-color:#eee;border:1px solid #aaa;display:flex;font-size:10px;align-items: center; padding-top:0px;padding:0px 1px;   }
+.sameAsLogo { color:black; font-weight:bold; background-color:#eee;border:1px solid #aaa;font-size:10px;align-items: center; padding-top:0px;padding:0px 2px;  line-height:20px; }
 
 .source-data,
 .source-data a { display:inline-block; position:relative; }
 .source-data span { width:0;height:0;display:inline-block;position:absolute;background:transparent;
-   border:8px solid transparent;border-left-color:rgba(229, 74, 53,1);transform:rotate(-45deg);
-   top:-8px;right:-4px; opacity:0;transition:all 300ms ease-in-out;  pointer-events: none;
+   border:6px solid transparent;border-left-color:rgba(229, 74, 53,1);transform:rotate(-45deg);
+   top:-8px;right:-4px; opacity:0;transition:all 100ms ease-in-out;  pointer-events: none;
 }
 .source-data:hover span { opacity:1; pointer-events: auto; cursor:pointer;}
 a.menu-item-source {
