--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -28,7 +28,7 @@
    /* transition:transform-origin 1000ms linear ; */
 }
 .mirador-container .mirador-viewer .image-view { position:absolute; }
-.mirador-container .mirador-viewer ul.scroll-listing-thumbs li {  width:auto;display:block;position:relative; }
+.mirador-container .mirador-viewer ul.scroll-listing-thumbs li {  width:auto;display:block;position:relative; padding:0; margin-bottom:0; }
 .mirador-container .mirador-viewer ul.scroll-listing-thumbs li img { position:relative; }
 .mirador-container ul.scroll-listing-thumbs li .thumb-label { display:inline-block; }
 .user-buttons.mirador-main-menu li:nth-last-child(3) { padding-left:5px;cursor:default;  }
@@ -52,6 +52,9 @@
 .mirador-container .canvas-count { text-align: left; }
 .mirador-container .remaining { display:none; }
 .mirador-container .preview-images a:not(:first-child) { display:none; }
+
+.mirador-container .panel-thumbnail-view ul.panel-listing-thumbs li img { max-height:80px !important; }
+
 
 /* #viewer.demo .user-buttons.mirador-main-menu li:last-child { display:none; } */
 
